# SQuAsh

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.bash  setup.py
include/: kernels.hpp
notebooks/: plots.ipynb  plt_plot_style.mplstyle
rocm_torch_extension/: backward_data.hpp  data_helpers.hpp  enums.hpp  forward_data.hpp  forward_data_hip.hpp  generic_vector.hip  mlp.hip  mlp_hip.hip  mlp_hip_train.py  setup.py  trainer.py
scripts/: plots.ipynb
squash/: benchmark.py  benchmarks.ipynb  ffi_linear.py  mlp_hip_train.py  op_check.py  opt.py  trainer.py  utils.py
src/: CMakeLists.txt  kernels.cpp
test/: CMakeLists.txt  test_kernels.cpp
